--- a/src/style.css
+++ b/src/style.css
@@ -9,8 +9,9 @@
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  /* -webkit-font-smoothing: antialiased; */
+  /* -moz-osx-font-smoothing: grayscale; */
+  overflow: auto;
 }
 
 a {
@@ -25,8 +26,8 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
+  /* place-items: center; */
+  min-width: 100vw;
   min-height: 100vh;
 }
 
@@ -59,9 +60,10 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  max-width: 100vw;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
 }
 
 @media (prefers-color-scheme: light) {
